[package]
name = "enumly"
version = "1.1.0"
edition = "2024"
authors = ["Jababa <im@jababa.im>"]
description = "Provides a procedural macro that exposes a compile-time static list of all variants of an enum."
licence = "MIT"

[dependencies]
enumly-derive = { version = "1.1.0", path = "../rust-enumly-derive" }
